--- a/www/wp-content/themes/yana/css/_homepage.scss
+++ b/www/wp-content/themes/yana/css/_homepage.scss
@@ -46,8 +46,7 @@
 
   .title {
     margin: 0 0 em(6px,24px);
-    // TODO: 77 sans cond bold
-    @include sans-condensed(em(24px), (30/24));
+    @include sans-bold-condensed(em(24px), (30/24));
     color: #fff;
   }
 
@@ -98,9 +97,8 @@
   .title, p { color: $bluegrey; }
 
   .title {
-    // TODO: 77 bold cond
     margin: em(18px,20px) 0;
-    @include sans-condensed(em(20px), (48/20));
+    @include sans-bold-condensed(em(20px), (48/20));
     letter-spacing: 2px;
     text-transform: uppercase;
   }
