Rough thank you category page

--- a/www/wp-content/themes/yana/css/_widgets.scss
+++ b/www/wp-content/themes/yana/css/_widgets.scss
@@ -140,4 +140,11 @@
 
 
 
+.post-toc .category-thanks p {
+  padding: em(12px,14px) 0;
+      font-size: em(14px);
+      line-height: (20/14);
+      color: #7CBFC7;
+}
+
 
